    - fix bug that makes config files recompile every time
      (Nagger, Monte)
    - add dpi functionality to html_image, change "name"
      parameter to "file" (Thomas Shulz, Monte)
    - fix height/width parameter index in html_image (Gerard,
      Monte)
    - get rid of unsetting name and script attributes
      to insert tag (Thomas Schulz, Monte)
    - changed argument order of string_format modifier back,
      was right in the first place (Monte)

Version 2.5.0-RC1 (March 5, 2003)
---------------------------------

    - fixed notice in popup function (Nagger, Monte)
    - fix "once" var compiling for include_php (Monte)
    - added nl2br modifier to distribution (Monte)
    - added html_image to distribution (Monte)
    - added cat modifier to distribution (Monte)
    - added html_table to distribution (Monte)
    - added << >> <> support to if statments (SMK, Monte)
    - fix _assign_smarty_interface to not overwrite keys
      other than 'request' (Jerome Poudevigne, Monte)
    - added html_checkboxes to distribution (Christopher Kvarme, Monte)
    - added html_radios to distribution (Christopher Kvarme, Monte)
    - fixed string_format modifier args (wrong order) (Paul
      Lockaby, Monte)
    - use tmp file for file writes, avoid file lock race (Monte)
    - support syntax "$`smarty.config.foo`.tpl" for embedded
      vars in quotes, and allow full dollar var syntax (Monte)
    - add $smarty.config.varname variable for accessing config vars (Paul
      Lockaby, Monte)
    - silence PHP warnings in function.fetch.php (Eduardo,
      Monte)
    - added get_config_vars(), same basic functionality as
      get_template_vars() (Monte)
    - update get_template_vars() to be able to get
      individual vars (Monte)
    - fix minor logic in _fetch_template_info (Dennis Gearon,
      Monte)
    - fix cache groups with compile_id set (Monte)
    - add support for merging appended vars (messju, Monte)
    - allow null as function attribute value